# i_am_dsp

./: Cargo.toml  README.MD
i_am_dsp/: Cargo.toml
i_am_dsp/src/: effects.rs  generators.rs  lib.rs  main.rs  parameters.rs  real_time_demo.rs  tools.rs
i_am_dsp/src/effects/: compressor.rs  convolver.rs  delay.rs  disperser.rs  distortion.rs  enveloper.rs  filter.rs  freq_shifter.rs  hilbert_transform.rs  hybrid_reverb.rs  phase_vocoder.rs  phaser.rs  pitch_shifter.rs  prelude.rs  reverb.rs  reverb_ir_gen.rs  smoothed_effect.rs  stereo_control.rs  visual.rs  vocoder.rs
i_am_dsp/src/generators/: additive.rs  adsr.rs  sampler.rs  stereo_generator.rs  wavetable.rs
i_am_dsp/src/tools/: interpolate.rs  matrix.rs  rhat_related.rs  ring_buffer.rs  smoother.rs  wsola.rs
i_am_dsp_derive/: Cargo.toml
i_am_dsp_derive/src/: lib.rs
i_am_dsp_iced/: Cargo.toml
i_am_dsp_iced/src/: demo.rs  lib.rs  main.rs  plugins.rs  styles.rs  tools.rs
i_am_dsp_iced/src/plugins/: wavetable_synth.rs
i_am_dsp_iced/src/tools/: adsr_editor.rs  knob.rs  selector.rs  slider.rs  unison.rs  utils.rs  waveform.rs
i_am_parameters_derive/: Cargo.toml
i_am_parameters_derive/src/: lib.rs
src/: effects.rs  generators.rs  lib.rs  main.rs  parameters.rs  prelude.rs  real_time_demo.rs  tools.rs
src/effects/: compressor.rs  convolver.rs  delay.rs  disperser.rs  distortion.rs  enveloper.rs  filter.rs  freq_shifter.rs  hilbert_transform.rs  hybrid_reverb.rs  phase_vocoder.rs  phaser.rs  pitch_shifter.rs  prelude.rs  reverb.rs  reverb_ir_gen.rs  smoothed_effect.rs  stereo_control.rs  visual.rs
src/generators/: additive.rs  adsr.rs  prelude.rs  sampler.rs  stereo_generator.rs  wavetable.rs
src/tools/: audio_io_chooser.rs  interpolate.rs  load_pcm_data.rs  matrix.rs  pcm_data.rs  rhat_related.rs  ring_buffer.rs  smoother.rs  ui_tools.rs
